fix agents page bleeding out from agent page

--- a/src/app/pages/agent/agent.component.scss
+++ b/src/app/pages/agent/agent.component.scss
@@ -1,7 +1,3 @@
-.modal {
-  background: rgba(0, 0, 0, 0.5);
-}
-
 .empty {
   text-align: center;
   font-style: italic;
