--- a/src/app/pages/agents/agents.component.scss
+++ b/src/app/pages/agents/agents.component.scss
@@ -1,38 +1,3 @@
-:host {
-  display: flex;
-  position: relative;
-  overflow-x: hidden;
-}
-
-#main {
-  flex: 1 1 auto;
-}
-
-#child {
-  background-color: var(--bs-body-bg);
-  position: absolute;
-  inset: 0;
-  overflow: auto;
-  translate: 101%;
-  // transition: translate 100ms;
-  transition: translate 350ms;
-  z-index: 2;
-
-  &:has(router-outlet + *) {
-    transition: translate 350ms ease-out;
-    translate: 0%;
-  }
-
-  &:has(router-outlet + .inactive) {
-    transition: translate 350ms;
-    translate: 101%;
-  }
-}
-
-.agent-link {
-  text-decoration: none;
-}
-
 .add-agent {
   min-height: 8.25rem;
 }
@@ -57,9 +22,8 @@
   transition: filter 150ms;
 
   &:hover {
-    // this is broken on light theme so just replace it for now
-    // filter: brightness(150%);
-    filter: contrast(87%);
+    filter: brightness(var(--hover-brightness));
+    // filter: contrast(87%);
   }
 }
 
