--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,11 @@
   display: flex;
   flex-direction: column;
 }
+
+html {
+  --hover-brightness: 80%;
+}
+
+html[data-bs-theme="dark"] {
+  --hover-brightness: 145%;
+}
